# tapo

./: .gitignore  README.md  pyproject.toml  server.py
static/: device.html  index.html
