[project]
name = "tapo-stream"
version = "0.1.0"
description = "Web UI for streaming TP-Link Tapo cameras via cloud"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pytapo>=3.4.0",
    "aiofiles>=24.0.0",
    "pycryptodome>=3.20.0",
    "aiosqlite>=0.20.0",
    "aioquic>=1.2.0",
]

[project.scripts]
tapo-stream = "server:main"
